0.12.4
 - fix: error message in preferences user tab no connection available
 - enh: allow to select upload cache directory in CLI
 - enh: make sure temporary cache directories for uploads are removed
 - enh: replace lru_cache with weak_lru_cache for instance methods
 - setup: bump dclab from 0.49.0 to 0.50.2
 - setup: bump urllib3 to 2.0
 - setup: bump requests_toolbelt to 1.0
0.12.3
 - setup: bump dclab from 0.48.4 to 0.49.0 (support tables)
0.12.2
 - setup: stop pinning dclab version
0.12.1
 - enh: GUI map "Search" button to "Enter" in "Find Data" UI
 - enh: GUI workaround for unresponsive widgets in tab widget: add labels
 - ref: GUI migrate "browse public" tab to its own widget
0.12.0
 - feat: GUI append the directory name to ZMD (M001_data.rtdc) uploads
 - feat: GUI support drag&drop of task files to upload tab (#70)
 - enh: replace ttl_cache with requests_cache (#69)
 - fix: aborting one upload/download job aborts all jobs (#71)
0.11.21
 - fix: reduce progress print statements in dcoraid-upload-task CLI
 - fix: occasionally the download path was computed incorrectly
 - enh: GUI check for visibility before updating widgets with QTimer
0.11.20
 - setup: bump dclab from 0.48.2 to 0.48.4
0.11.19
 - setup: bump dclab from 0.48.1 to 0.48.2
0.11.18
 - setup: bump dclab from 0.47.4 to 0.48.1
0.11.17
 - setup: bump dclab from 0.47.2 to 0.47.4
0.11.16
 - fix: return exit status 0 when using CLI with --version flag
0.11.15
 - setup: bump dclab from 0.47.1 to 0.47.2
0.11.14
 - fix: logs cluttered with warning messages when no API key is set
 - enh: add --version flag to CLI
 - setup: bump dclab from 0.47.0 to 0.47.1
0.11.13
 - maintenance release
0.11.12
 - enh: retry on connection errors when using CLI for uploads (#66)
0.11.11
 - fix: refactor "Job list not initialized!" exception in GUI into a
   logger warning (#65)
0.11.10
 - setup: bump dclab from 0.46.4 to 0.47.0 (new feature)
0.11.9
 - setup: bump dclab from 0.46.0 to 0.46.4 (new features)
0.11.8