@@ -1,6 +1,7 @@
 0.12.4
  - fix: error message in preferences user tab no connection available
  - enh: allow to select upload cache directory in CLI
+ - enh: allow to select upload cache directory in GUI
  - enh: make sure temporary cache directories for uploads are removed
  - enh: replace lru_cache with weak_lru_cache for instance methods
  - setup: bump dclab from 0.49.0 to 0.50.2
